[project]
name = "migration-tools"
version = "0.1.0"
description = "CLI utilities for migrating data from the legacy MariaDB schema into the new PostgreSQL schema."
readme = "README.md"
authors = [{ name = "UsagiLab" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.1.19",
    "pymysql>=1.1.0",
    "rich>=13.7.1",
]

[project.scripts]
migration-tools = "migration_tools.cli:app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
]

[tool.uv]
managed = true
